# OpenHPSDR-Thetis

./: ReadMe.md  ReadMe.md.bak
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Project Files/Source/: ReleaseNotes.txt
Project Files/Source/ChannelMaster/: cmasio.c  cmasio.h  netInterface.c  network.c  network.h  networkproto1.c  obbuffs.c
Project Files/Source/Console/: AssemblyInfo.cs  DiversityForm.cs  FilterForm.cs  Midi2CatCommands.cs  PSForm.cs  PSForm.designer.cs  Path_Illustrator.cs  PrettyTrackBar.cs  RAForm.cs  Skin.cs  Thetis.csproj  VersionInfo.cs  app.config  audio.cs  clsRadioServer.cs  cmaster.cs  common.cs  console.Designer.cs  console.cs  console.resx  cwx.cs  database.cs  display.cs  dsp.cs  enums.cs  frmFinder.cs  packages.config  radio.cs  setup.cs  setup.designer.cs  setup.resx  splash.cs  titlebar.cs  ucInfoBar.cs  ucOCLedStrip.cs  wave.cs  xvtr.cs
Project Files/Source/Console/Andromeda/: Andromeda.cs  SliderSettingsForm.cs
Project Files/Source/Console/CAT/: CATCommands.cs  CATParser.cs  CATStructs.xml
Project Files/Source/Thetis-Installer/: Product.wxs  Thetis_en-us.wxl
Project Files/Source/wdsp/: fir.c  rnnr.c  rnnr.h  sbnr.c  sbnr.h  version.c  wdsp.vcxproj
Project Files/lib/NR_Algorithms_x64/: rnnoise.lib
Project Files/lib/NR_Algorithms_x64/src/rnnoise/: CMakeLists.txt  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
Project Files/lib/NR_Algorithms_x64/src/rnnoise/include/: rnnoise.h
Project Files/lib/NR_Algorithms_x64/src/rnnoise/src/: denoise.c
(+13 files in other folders)
